@@ -120,6 +120,10 @@ public abstract class ElasticsearchTestBasePlugin implements Plugin<Project> {
                 "--add-opens=java.base/java.nio.file=ALL-UNNAMED",
                 "--add-opens=java.base/java.time=ALL-UNNAMED",
                 "--add-opens=java.management/java.lang.management=ALL-UNNAMED",
+                // Arrow (may need to be replaced by org.apache.arrow.memory.core once modularized)
+                "--add-opens=java.base/java.nio=ALL-UNNAMED",
+                // Define the allocation manager type to avoid classpath scanning to locate one.
+                "-Darrow.allocation.manager.type=Unsafe",
                 "-XX:+HeapDumpOnOutOfMemoryError"
             );
 
